Make the cards monospace

--- a/project/app/templates/four-hands-3x3-partial.html
+++ b/project/app/templates/four-hands-3x3-partial.html
@@ -2,7 +2,11 @@
 {% load player_extras %}
 {% partialdef four-hands-3x3-partial %}
 {# North at the top as per the Bridge Writing Style Guide #}
-<div id="four-hands" style="border: 1px solid; height: 50%" data-table="">
+<div id="four-hands"
+     style="border: 1px solid;
+            height: 50%;
+            font-family: monospace"
+     data-table="">
     <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
         <div class="col"></div>
         <div class="col">
