--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -13,6 +13,7 @@
               integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
               crossorigin="anonymous">
         <link href="{% static 'app/datatables.css' %}" rel="stylesheet">
+        <link href="{% static 'app/bridge.css' %}" rel="stylesheet">
         <link rel="icon" type="image/png" href="{% static 'app/spadesuit.png' %}" />
     </head>
     <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
