--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -22,6 +22,7 @@
             <a href="{% url 'app:home' %}">Home</a> | <a href="{% url 'app:lobby' %}">Lobby</a> | <a href="{% url 'app:table' %}">Tables</a>
             | <a href="{% url 'app:players' %}">Players</a>
             | version <tt>{{ VERSION }}</tt>
+            {% if debug %}<h2>| It's debugging time!!</h2>{% endif %}
         </div>
         <div>
             {% if user.is_authenticated %}
@@ -61,7 +62,6 @@
         <script src="{% static 'app/datatables.js' %}"></script>
         <script src="{% static 'app/htmx.min.js' %}"></script>
         <script src="{% static 'app/sse.js' %}"></script>
-        {% block scripts %}
-        {% endblock %}
+        {% block scripts %}{% endblock %}
     </body>
 </html>
