Keep the bidding-box <div> even if we're not displaying anything.
That way, when the browser reloads it at the end of the auction, we have someething to send (namely an empty div).

Also: Arguably make some unit tests clearer.  Pretty extensive overhaul

--- a/project/app/templates/bidding-box-partial.html
+++ b/project/app/templates/bidding-box-partial.html
@@ -1,6 +1,8 @@
 {% load partials %}
 {% partialdef bidding-box-partial %}
-<div style="font-family: monospace;" id="bidding-box">{{ bidding_box_buttons }}</div>
+<div style="font-family: monospace;" id="bidding-box">
+    {% if display_bidding_box %}{{ bidding_box_buttons }}{% endif %}
+</div>
 {% endpartialdef bidding-box-partial %}
 {% partialdef bidding-box-scripts %}
 <script>
