--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -24,23 +24,41 @@
             | version <tt>{{ VERSION }}</tt>
             {% if debug %}<h2>| It's debugging time!!</h2>{% endif %}
         </div>
-        <div>
-            {% if user.is_authenticated %}
-                Hello,
-                {% if user.player %}
-                    {{ user.player.as_link }}.
+        <div class="row">
+            <div class="col">
+                {% if user.is_authenticated %}
+                    Hello,
+                    {% if user.player %}
+                        {{ user.player.as_link }}.
+                    {% else %}
+                        {{ user }}.
+                    {% endif %}
+                </div>
+                <div class="col">
+                    {# TODO -- reload the whole page, or somehow update the "Hello" message, which includes whether we're a bot or not #}
+                    <button class="btn btn-primary"
+                            hx-post="{% url 'app:bot-checkbox-toggle' user.player.pk %}">
+                        Click to make yourself
+                        {% if user.player.is_human %}
+                            a bot
+                        {% else %}
+                            human
+                        {% endif %}
+                    </button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <form method="post" action="{% url 'logout' %}">
+                        {% csrf_token %}
+                        <input type="submit" value="logout" />
+                        <input type="hidden" name="next" value="/" />
+                    </form>
                 {% else %}
-                    {{ user }}.
+                    <a href="{% url 'app:signup' %}">Sign Up</a>
+                    |<a href="{% url 'login' %}">Login</a>
                 {% endif %}
-                <form method="post" action="{% url 'logout' %}">
-                    {% csrf_token %}
-                    <input type="submit" value="logout">
-                    <input type="hidden" name="next" value="/">
-                </form>
-            {% else %}
-                <a href="{% url 'app:signup' %}">Sign Up</a>
-                |<a href="{% url 'login' %}">Login</a>
-            {% endif %}
+            </div>
         </div>
         {% if messages %}
             <div>
