First crack at the fix

--- a/project/app/templates/four-hands-3x3-partial.html
+++ b/project/app/templates/four-hands-3x3-partial.html
@@ -37,10 +37,25 @@ four_hands_event_source.addEventListener('message', function (e) {
     if ("card" in d) {
       console.log("Play event listener saw " + e.data);
 
-      var partnershipStatusDataset = document.querySelector("#four-hands").dataset;
-
       // TODO: Reload the partial only if the data indicates that the viewer, or dummy's, hands have changed.
       htmx.ajax('GET', '{{ four_hands_partial_endpoint }}', {target:'#four-hands', swap:'outerHTML'});
+    }
+
+}, false);
+
+var opening_lead_event_source = new ReconnectingEventSource('/events/table/{{ table.pk }}');
+
+opening_lead_event_source.addEventListener('message', function (e) {
+    var d = JSON.parse(e.data) ;
+    if ("contract" in d) {
+      console.log("Play event listener saw " + e.data);
+
+      var openingLead = d["contract"]["opening_lead"];
+
+      if (opening_lead == {{ user.player.seat }}) {
+        // Ideally we'd just reload the one hand that changed, not all four; but oh well
+        htmx.ajax('GET', '{{ four_hands_partial_endpoint }}', {target:'#four-hands', swap:'outerHTML'});
+      }
     }
 
 }, false);
