Seems fixed, but I have a lot of debugging stuff added
In particular, I've eviscerated generate_fake_data

Keep its current state in a commit, but add another to revert it and then merge the result, so there's a record of how I debugged.

--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -36,15 +36,17 @@
                 </div>
                 <div class="col">
                     {# TODO -- reload the whole page, or somehow update the "Hello" message, which includes whether we're a bot or not #}
-                    <button class="btn btn-primary"
-                            hx-post="{% url 'app:bot-checkbox-toggle' user.player.pk %}">
-                        Click to make yourself
-                        {% if user.player.is_human %}
-                            a bot
-                        {% else %}
-                            human
-                        {% endif %}
-                    </button>
+                    {% if user.player %}
+                        <button class="btn btn-primary"
+                                hx-post="{% url 'app:bot-checkbox-toggle' user.player.pk %}">
+                            Click to make yourself
+                            {% if user.player.is_human %}
+                                a bot
+                            {% else %}
+                                human
+                            {% endif %}
+                        </button>
+                    {% endif %}
                 </div>
             </div>
             <div class="row">
