OK, here's a crazy idea: have *one* event listener for auction stuff
Also combine the two partials into a single file

Doesn't fix it, but maybe the stuff is easier to understand

--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -82,8 +82,6 @@
         <script src="{% static 'app/datatables.js' %}"></script>
         <script src="{% static 'app/htmx.min.js' %}"></script>
         <script src="{% static 'app/sse.js' %}"></script>
-        <script>htmx.logAll();</script>
-        {% block scripts %}
-        {% endblock %}
+        {% block scripts %}{% endblock %}
     </body>
 </html>
