--- a/project/app/templates/auction-partial.html
+++ b/project/app/templates/auction-partial.html
@@ -37,17 +37,23 @@
     <h2>{{ table.current_auction.status }}</h2>
 {% endif %}
 {% endpartialdef auction-partial %}
+{% partialdef bidding-box-partial %}
+<div style="font-family: monospace;" id="bidding-box">
+    {% if display_bidding_box %}{{ bidding_box_buttons }}{% endif %}
+</div>
+{% endpartialdef bidding-box-partial %}
 {% partialdef auction-scripts %}
 <script>
-var es = new ReconnectingEventSource('{{ auction_event_source_endpoint }}');
+var auctionEventSource = new ReconnectingEventSource('{{ auction_event_source_endpoint }}');
 
-es.addEventListener('message', function (e) {
+auctionEventSource.addEventListener('message', function (e) {
     var d = JSON.parse(e.data) ;
     // Reload the partial only if the data indicates something about the auction.
     if ("call" in d) {
       console.log("Auction event listener saw " + e.data);
 
       htmx.ajax('GET', '{{ auction_partial_endpoint }}', {target:'#auction', swap:'outerHTML scroll:bottom'});
+      htmx.ajax('GET', '{{ bidding_box_partial_endpoint }}', {target:'#bidding-box', swap:'outerHTML'});
     }
 
 }, false);
