Aha, this may be the fix.
htmx.ajax is *asynchronous*, so I should wait for the first call to finish before starting the second one.

Not sure why that matters, but I do recall seeing exceptions in the browser console when I had the bot sending messages
very frequently -- presumably that caused the browser to start lots of ajaxes concurrently, which presumably causes
chaos and/or tsuris.

--- a/project/app/templates/auction-partial.html
+++ b/project/app/templates/auction-partial.html
@@ -52,10 +52,13 @@ auctionEventSource.addEventListener('message', function (e) {
     if ("call" in d) {
       console.log("Auction event listener saw " + e.data);
 
-      htmx.ajax('GET', '{{ auction_partial_endpoint }}', {target:'#auction', swap:'outerHTML scroll:bottom'});
-      console.log("Auction event listener got {{ auction_partial_endpoint }}");
-      htmx.ajax('GET', '{{ bidding_box_partial_endpoint }}', {target:'#bidding-box', swap:'outerHTML'});
-      console.log("Auction event listener got {{ bidding_box_partial_endpoint }}" );
+      htmx.ajax('GET', '{{ auction_partial_endpoint }}', {target:'#auction', swap:'outerHTML scroll:bottom'}).then(() => {
+          console.log("Auction event listener got {{ auction_partial_endpoint }}");
+          htmx.ajax('GET', '{{ bidding_box_partial_endpoint }}', {target:'#bidding-box', swap:'outerHTML'}).then(() => {
+              console.log("Auction event listener got {{ bidding_box_partial_endpoint }}" );
+          });
+      });
+
     }
 
 }, false);
