--- a/project/app/templates/four-hands-3x3-partial.html
+++ b/project/app/templates/four-hands-3x3-partial.html
@@ -39,7 +39,7 @@ four_hands_event_source.addEventListener('message', function (e) {
 
       // TODO: Reload the partial only if the data indicates that the viewer, or dummy's, hands have changed.
       htmx.ajax('GET', '{{ four_hands_partial_endpoint }}', {target:'#four-hands', swap:'outerHTML'}).then(() => {
-        htmx.ajax('GET', '{{ handrecord_summary_endpoint }}', {target:'#handrecord-summary', swap:'innerHTML'})
+        htmx.ajax('GET', '{{ handaction_summary_endpoint }}', {target:'#handaction-summary', swap:'innerHTML'})
       });
     }
 
