--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -2,10 +2,10 @@
 {% block content %}
     <div>
         <h1>
-            <div>{{ table.current_handaction.board }}</div>
+            <div>{{ table.current_action.board }}</div>
         </h1>
         <h1>
-            <div id="handaction-summary">{{ table.current_handaction.status }}</div>
+            <div id="handaction-summary">{{ table.current_action.status }}</div>
         </h1>
         <h1>
             <div id="auction-summary">Auction: {{ table.current_auction.status }}</div>
