--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -1,18 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
     <div>
+        <div style="display: flex">
+            <div style="flex-grow: 1">
+                <h1>{{ table.current_action.board }}</h1>
+            </div>
+            <div>
+                <h1>{{ table }}</h1>
+            </div>
+        </div>
         <h1>
-            <div>{{ table.current_action.board }}</div>
+            <div id="auction-summary">Auction: {{ table.current_auction.status }}</div>
         </h1>
         <h1>
             <div id="handaction-summary">{{ table.current_action.status }}</div>
         </h1>
-        <h1>
-            <div id="auction-summary">Auction: {{ table.current_auction.status }}</div>
-        </h1>
-    </div>
-    <div>
-        <h2>{{ table }}</h2>
     </div>
     <div class="col">{% include 'four-hands-3x3-partial.html#four-hands-3x3-partial' %}</div>
     <div style="display: flex;">
