Unit tests pass, I think?
Currently struggling with https://github.com/python-poetry/poetry/issues/6841

--- a/project/app/templates/four-hands-3x3-partial.html
+++ b/project/app/templates/four-hands-3x3-partial.html
@@ -10,19 +10,19 @@
     <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
         <div class="col"></div>
         <div class="col">
-            {{ pokey_buttons.NORTH }}{{ card_display.NORTH.player.name_dir }}: {{ card_display.NORTH.cards }}
+            {{ pokey_buttons.NORTH }}{{ card_display.North.player.name_dir }}: {{ card_display.North.cards }}
         </div>
         <div class="col"></div>
     </div>
     <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
-        <div class="col">{{ pokey_buttons.WEST }}{{ card_display.WEST.player.name_dir }}: {{ card_display.WEST.cards }}</div>
+        <div class="col">{{ pokey_buttons.WEST }}{{ card_display.West.player.name_dir }}: {{ card_display.West.cards }}</div>
         <div class="col">{% include 'three-by-three-trick-display-partial.html#three-by-three-trick-display' %}</div>
-        <div class="col">{{ pokey_buttons.EAST }}{{ card_display.EAST.player.name_dir }}: {{ card_display.EAST.cards }}</div>
+        <div class="col">{{ pokey_buttons.EAST }}{{ card_display.East.player.name_dir }}: {{ card_display.East.cards }}</div>
     </div>
     <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
         <div class="col"></div>
         <div class="col">
-            {{ pokey_buttons.SOUTH }}{{ card_display.SOUTH.player.name_dir }}: {{ card_display.SOUTH.cards }}
+            {{ pokey_buttons.SOUTH }}{{ card_display.South.player.name_dir }}: {{ card_display.South.cards }}
         </div>
         <div class="col"></div>
     </div>
