--- a/project/app/templates/four-hands-3x3-partial.html
+++ b/project/app/templates/four-hands-3x3-partial.html
@@ -6,7 +6,7 @@
      style="border: 1px solid;
             height: 50%;
             font-family: monospace"
-     data-table="">
+     data-table="{{ table.pk }}">
     <div class="row" style="display: grid; grid-template-columns: 1fr 1fr 1fr">
         <div class="col"></div>
         <div class="col">
@@ -35,12 +35,17 @@ var four_hands_event_source = new ReconnectingEventSource('{{ play_event_source_
 four_hands_event_source.addEventListener('message', function (e) {
     var d = JSON.parse(e.data) ;
     if ("card" in d) {
-      console.log("Play event listener saw " + e.data);
+        console.log("Play event listener saw  a card in " + d);
+        var tableDataset = document.querySelector("#four-hands").dataset;
+        console.log(tableDataset);
+        if (d.table == tableDataset.table) {
+            console.log("Play event listener saw " + d);
 
-      // TODO: Reload the partial only if the data indicates that the viewer, or dummy's, hands have changed.
-      htmx.ajax('GET', '{{ four_hands_partial_endpoint }}', {target:'#four-hands', swap:'outerHTML'}).then(() => {
-        htmx.ajax('GET', '{{ handaction_summary_endpoint }}', {target:'#handaction-summary', swap:'innerHTML'})
-      });
+            // TODO: Reload the partial only if the data indicates that the viewer, or dummy's, hands have changed.
+            htmx.ajax('GET', '{{ four_hands_partial_endpoint }}', {target:'#four-hands', swap:'outerHTML'}).then(() => {
+                htmx.ajax('GET', '{{ handaction_summary_endpoint }}', {target:'#handaction-summary', swap:'innerHTML'})
+            });
+        }
     }
 
 }, false);
