Seems to be working, although ...
... I saw the console.log message more times than I expected (either twice, or maybe 20 times? There's little numbers in
the developer tools next to the two lines correpsonding to the log message -- the first is a 6 and the second is a 14)

--- a/project/app/templates/four-hands-3x3-partial.html
+++ b/project/app/templates/four-hands-3x3-partial.html
@@ -51,6 +51,8 @@ play_event_source.addEventListener('message', function (e) {
             console.log("Play event listener saw " + d.card + ", so it fetched {{ four_hands_partial_endpoint }} and {{ handaction_summary_endpoint }}");
         });
 
+    } else if (("table" in d) && "final_score" in d) {
+        console.log("Play event listener saw something to suggest the hand is over?" + d.final_score );
     }
 
 
