--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -16,6 +16,9 @@
             <div id="handaction-summary">{{ table.current_action.status }}</div>
         </h1>
     </div>
+    {% if table.hand_is_complete is True %}
+        <div>I should probably stick a "Review this hand" link here or something</div>
+    {% endif %}
     <div class="col">{% include 'four-hands-3x3-partial.html#four-hands-3x3-partial' %}</div>
     <div style="display: flex;">
         <div>{% include 'auction-partial.html#bidding-box-partial' %}</div>
