--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -17,7 +17,11 @@
         </h1>
     </div>
     {% if table.hand_is_complete is True %}
-        <div>I should probably stick a "Review this hand" link here or something</div>
+        <div>
+            <h1>
+                <a href="{% url 'app:table-archive' table.pk %}">Review this hand</a>
+            </h1>
+        </div>
     {% endif %}
     <div class="col">{% include 'four-hands-3x3-partial.html#four-hands-3x3-partial' %}</div>
     <div style="display: flex;">
