Do the last bit, and reload the page when the hand ends

--- a/project/app/templates/four-hands-3x3-partial.html
+++ b/project/app/templates/four-hands-3x3-partial.html
@@ -60,6 +60,7 @@ htmx.on("htmx:afterSettle", function(evt) {
     if (handStatusDataset.handStatus) {
         console.log("Way-ul, our DOM has settled, and the ol' clock on the wall says " +  handStatusDataset.handStatus + ", so maybe I'll forcibly reload this page");
         play_event_source.close();
+        window.location.reload();
     }
 })
 
