--- a/project/app/templates/table_archive.html
+++ b/project/app/templates/table_archive.html
@@ -15,7 +15,7 @@
             <div class="row">
                 {% for p in t.plays %}
                     <div class="col">
-                        {{ p.player.name }} (sitting {{ p.player.seat }}) played {{ p.card }}
+                        {{ p.player.name }} (sitting {{ p.player.seat }}) played <span style="color: {{ p.card.color }}">{{ p.card }}</span>
                         {% if p.wins_the_trick %}✨{% endif %}
                     </div>
                 {% endfor %}
