Draw an <hr> between rows of the hand record

--- a/project/app/templates/table_archive.html
+++ b/project/app/templates/table_archive.html
@@ -20,6 +20,7 @@
                     </div>
                 {% endfor %}
             </div>
+            {% if not forloop.last %}<hr />{% endif %}
         {% endfor %}
     </div>
 {% endblock content %}
