Activate (and mollify) djlint-django

--- a/project/app/templates/table_archive.html
+++ b/project/app/templates/table_archive.html
@@ -5,7 +5,7 @@
         <h2>{{ table.current_action.board }}</h2>
     </div>
     <div style="display: flex;">
-        <div style="flex-grow: 1">{% include 'auction-partial.html#auction-partial' %}</div>
+        <div style="flex-grow: 1">{% include "auction-partial.html#auction-partial" %}</div>
     </div>
     <div>
         <div>
