--- a/project/app/templates/table_list.html
+++ b/project/app/templates/table_list.html
@@ -33,6 +33,6 @@
                 </tr>
             {% endfor %}
         </table>
-        {% include 'pagination-controls.html' %}
+        {% include "pagination-controls.html" %}
     {% endblock table_list %}
 {% endblock content %}
