--- a/project/app/templates/404.html
+++ b/project/app/templates/404.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
         <div>
@@ -12,3 +12,4 @@
             <a href="{% url 'app:home' %}">Home</a>
         </div>
     </body>
+</html>
