--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -6,21 +6,23 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>
-            {% block title %}Bridge{% endblock %}
+            {% block title %}
+                Bridge
+            {% endblock title %}
         </title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
               rel="stylesheet"
               integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
               crossorigin="anonymous">
-        <link href="{% static 'app/datatables.css' %}" rel="stylesheet">
-        <link href="{% static 'app/bridge.css' %}" rel="stylesheet">
-        <link rel="icon" type="image/png" href="{% static 'app/spadesuit.png' %}" />
+        <link href="{% static "app/datatables.css" %}" rel="stylesheet">
+        <link href="{% static "app/bridge.css" %}" rel="stylesheet">
+        <link rel="icon" type="image/png" href="{% static "app/spadesuit.png" %}" />
     </head>
     <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
           data-viewer="{{ user.player }}">
         <div>
-            <a href="{% url 'app:home' %}">Home</a> | <a href="{% url 'app:lobby' %}">Lobby</a> | <a href="{% url 'app:table' %}">Tables</a>
-            | <a href="{% url 'app:players' %}">Players</a>
+            <a href="{% url "app:home" %}">Home</a> | <a href="{% url "app:lobby" %}">Lobby</a> | <a href="{% url "app:table" %}">Tables</a>
+            | <a href="{% url "app:players" %}">Players</a>
             | version <tt>{{ VERSION }}</tt>
             {% if debug %}<h2>| It's debugging time!!</h2>{% endif %}
         </div>
@@ -72,7 +74,8 @@
             </div>
         {% endif %}
         <div id="content" class="container">
-            {% block content %}{% endblock %}
+            {% block content %}
+            {% endblock content %}
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -82,6 +85,7 @@
         <script src="{% static 'app/datatables.js' %}"></script>
         <script src="{% static 'app/htmx.min.js' %}"></script>
         <script src="{% static 'app/sse.js' %}"></script>
-        {% block scripts %}{% endblock %}
+        {% block scripts %}
+        {% endblock scripts %}
     </body>
 </html>
