--- a/project/app/templates/player_list.html
+++ b/project/app/templates/player_list.html
@@ -44,6 +44,6 @@
             {% endfor %}
         </tbody>
     </table>
-    {% include 'pagination-controls.html' %}
+    {% include "pagination-controls.html" %}
 {% endblock player_list %}
 {% endblock content %}
