--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -23,15 +23,15 @@
             </h1>
         </div>
     {% endif %}
-    <div class="col">{% include 'four-hands-3x3-partial.html#four-hands-3x3-partial' %}</div>
+    <div class="col">{% include "four-hands-3x3-partial.html#four-hands-3x3-partial" %}</div>
     <div style="display: flex;">
-        <div>{% include 'auction-partial.html#bidding-box-partial' %}</div>
-        <div style="flex-grow: 1">{% include 'auction-partial.html#auction-partial' %}</div>
+        <div>{% include "auction-partial.html#bidding-box-partial" %}</div>
+        <div style="flex-grow: 1">{% include "auction-partial.html#auction-partial" %}</div>
     </div>
 {% endblock content %}
 {% block scripts %}
-    {% include 'auction-partial.html#auction-scripts' %}
-    {% include 'four-hands-3x3-partial.html#four-hands-3x3-scripts' %}
+    {% include "auction-partial.html#auction-scripts" %}
+    {% include "four-hands-3x3-partial.html#four-hands-3x3-scripts" %}
     <script>
 htmx.on("htmx:responseError", function(evt) {
    alert(evt.detail.xhr.response);
