--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -83,7 +83,7 @@
         <script src="{% static 'django_eventstream/eventsource.min.js' %}"></script>
         <script src="{% static 'django_eventstream/reconnecting-eventsource.js' %}"></script>
         <script src="{% static 'app/datatables.js' %}"></script>
-        <script src="{% static 'app/htmx.min.js' %}"></script>
+        <script src="{% static 'app/htmx.js' %}"></script>
         <script src="{% static 'app/sse.js' %}"></script>
         {% block scripts %}
         {% endblock scripts %}
