Log more stuff when we get a "play" event

--- a/project/app/templates/four-hands-3x3-partial.html
+++ b/project/app/templates/four-hands-3x3-partial.html
@@ -49,7 +49,14 @@ play_event_source.addEventListener('message', function (e) {
         // TODO: Reload the partial only if the data indicates that the viewer, or dummy's, hands have changed.
         htmx.ajax('GET', '{{ four_hands_partial_endpoint }}', {target:'#four-hands', swap:'outerHTML'}).then(() => {
             htmx.ajax('GET', '{{ handaction_summary_endpoint }}', {target:'#handaction-summary', swap:'innerHTML'})
-            console.log("Play event listener saw " + d.card + ", so it fetched {{ four_hands_partial_endpoint }} and {{ handaction_summary_endpoint }}");
+            console.log(
+                new Date().toISOString(),
+                ": Play event listener saw "
+                    + d.card
+                    + " from "
+                    + d.player
+                    + ", so it fetched {{ four_hands_partial_endpoint }} and {{ handaction_summary_endpoint }}"
+            );
         });
 
     }
