--- a/project/app/templates/four-hands-3x3-partial.html
+++ b/project/app/templates/four-hands-3x3-partial.html
@@ -59,6 +59,7 @@ htmx.on("htmx:afterSettle", function(evt) {
     var handStatusDataset = document.querySelector("#four-hands").dataset;
     if (handStatusDataset.handStatus) {
         console.log("Way-ul, our DOM has settled, and the ol' clock on the wall says " +  handStatusDataset.handStatus + ", so maybe I'll forcibly reload this page");
+        auctionEventSource.close();
         play_event_source.close();
         window.location.reload();
     }
