--- a/project/app/templates/table_detail.html
+++ b/project/app/templates/table_detail.html
@@ -13,7 +13,7 @@
             <div id="auction-summary">Auction: {{ table.current_auction.status }}</div>
         </h1>
         <h1>
-            <div id="handaction-summary">{{ table.current_action.status }}</div>
+            <div id="hand-summary">{{ table.current_action.status }}</div>
         </h1>
     </div>
     {% if table.hand_is_complete is True %}
