--- a/project/app/templates/base.html
+++ b/project/app/templates/base.html
@@ -27,7 +27,7 @@
             {% if debug %}<h2>| It's debugging time!!</h2>{% endif %}
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col" id="hello-user">
                 {% if user.is_authenticated %}
                     Hello,
                     {% if user.player %}
@@ -39,15 +39,16 @@
                 <div class="col">
                     {# TODO -- reload the whole page, or somehow update the "Hello" message, which includes whether we're a bot or not #}
                     {% if user.player %}
-                        <button class="btn btn-primary"
-                                hx-post="{% url 'app:bot-checkbox-toggle' user.player.pk %}">
-                            Click to make yourself
-                            {% if user.player.is_human %}
-                                a bot
-                            {% else %}
-                                human
-                            {% endif %}
-                        </button>
+                        <div class="form-check form-switch">
+                            <input class="form-check-input"
+                                   type="checkbox"
+                                   role="switch"
+                                   id="bot-plays-for-me-switch"
+                                   hx-post="{% url 'app:bot-checkbox-toggle' user.player.pk %}"
+                                   hx-target="#hello-user"
+                                   {% if user.player.allow_bot_to_play_for_me %}checked{% endif %}>
+                            <label class="form-check-label" for="bot-plays-for-me-switch">Let the bot play for me</label>
+                        </div>
                     {% endif %}
                 </div>
             </div>
