--- a/project/app/templates/table_list.html
+++ b/project/app/templates/table_list.html
@@ -16,19 +16,19 @@
             {% for table in page_obj %}
                 <tr>
                     <td>
-                        <a href="{% url 'app:table-detail' table.pk %}">{{ table.pk }}</a>
+                        <a href="{% url 'app:table-detail-or-archive' table.pk %}">{{ table.pk }}</a>
                     </td>
                     <td>
-                        <a href="{% url 'app:table-detail' table.pk %}">{{ table.current_hand.board }}</a>
+                        <a href="{% url 'app:table-detail-or-archive' table.pk %}">{{ table.current_hand.board }}</a>
                     </td>
                     <td>
-                        <a href="{% url 'app:table-detail' table.pk %}">{{ table.playaz }}</a>
+                        <a href="{% url 'app:table-detail-or-archive' table.pk %}">{{ table.playaz }}</a>
                     </td>
                     <td>
-                        <a href="{% url 'app:table-detail' table.pk %}">{{ table.current_auction_status }}</a>
+                        <a href="{% url 'app:table-detail-or-archive' table.pk %}">{{ table.current_auction_status }}</a>
                     </td>
                     <td>
-                        <a href="{% url 'app:table-detail' table.pk %}">{{ table.current_hand.status }}</a>
+                        <a href="{% url 'app:table-detail-or-archive' table.pk %}">{{ table.current_hand.status }}</a>
                     </td>
                 </tr>
             {% endfor %}
